kubernetes/microservices-template/components/ingress/ingress.yaml
---
# https://kubernetes.io/docs/concepts/services-networking/ingress/
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microservice-ingress
  labels:
    app.kubernetes.io/name: microservice
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  defaultBackend:
    service:
      name: ~
      port:
        number: 80
  rules:
  - host: ~
    http:
      paths:
        - backend:
            service:
              name: ~
              port:
                number: 80
          path: /
          pathType: Prefix
  tls:
    - hosts: []
      secretName: ingress-tls-csi
